# lemuria-2.1.1

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  cpuinfo.sh  cvs_clean.sh  git_clean.sh  lemuria.spec.in  lemuria.sym
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile.am  Makefile.in  config.h.in  config.h.in~  effect.h  lemuria.h  lemuria_private.h  lemuria_teapot_data.h  light.h  material.h  object.h  particle.h  tentacle.h  utils.h
lib/: Makefile.am  Makefile.in  analyis.c  archaic.c  background.c  blur.c  boioioing.c  bubbles.c  cube.c  deepsea.c  drive.c  effect.c  fft.c  fish.c  font.c  font.incl  fountain.c  goom.c  hyperbubble.c  icosphere.c  lemuria.c  lemuria_geometry.c  lemuria_teapot.c  light.c  lineobjects.c  lines.c  manta.c  material.c  monolith.c  mountains.c  obj_bubbles.c  object.c  offset.c  oscilloscope.c  oszi3d.c  particle.c  perspective.c  platon.c  psycho.c  random.c  (+20 more)
lib/gradients/: Makefile.am  Makefile.in  compile  grad2c.c  lemuria_archaic_1.incl  lemuria_deepsea_ceiling_1.incl  lemuria_deepsea_ceiling_2.incl  lemuria_deepsea_floor_1.incl  lemuria_drive_1.incl  lemuria_drive_2.incl  lemuria_lineobjects_1.incl  lemuria_monolith_1.incl  lemuria_monolith_2.incl  lemuria_monolith_3.incl  lemuria_psycho_1.incl  lemuria_psycho_2.incl  lemuria_psycho_3.incl  lemuria_psycho_4.incl  lemuria_psycho_5.incl  lemuria_tunnel_1.incl  lemuria_tunnel_2.incl  lemuria_tunnel_3.incl  lemuria_v4l.incl
lib/images/: Makefile.am  Makefile.in  archaic_desert.incl  clouds_large.incl  clouds_small.incl  fountain1.incl  fountain2.incl  fountain3.incl  gates_floor.incl  mystic_floor.incl  object_bubble.incl  png2c.c
lib/meshes/: Makefile.am  Makefile.in  dodekaeder.incl  gen_dodekaeder.c  gen_icosaeder.c  gen_icosphere.c  gen_star.c  icosphere.incl  star.incl  texture_grids.incl
lib/xaos/: Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in
lib/xaos/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/xaos/src/: Makefile.am  Makefile.in
lib/xaos/src/engine/: Makefile.am  Makefile.in  i386.c
lib/xaos/src/filter/: Makefile.am  Makefile.in
lib/xaos/src/include/: Makefile.am  Makefile.in  aconfig.h.in  aconfig.h.in~  config.h  fconfig.h  filter.h  formulas.h  gccaccel.h  misc-f.h  port.h  xio.h
lib/xaos/src/include/config/: Makefile.am  Makefile.in
lib/xaos/src/include/i386/: Makefile.am  Makefile.in  ctrl87.h
lib/xaos/src/include/mac/: Makefile.am  Makefile.in
lib/xaos/src/ui-hlp/: Makefile.am  Makefile.in  menu.c  render.c  ui_helper.c
lib/xaos/src/util/: Makefile.am  Makefile.in  timers.c  xmenu.c
m4/: Makefile.am  Makefile.in  check_funcs.m4
plugins/: Makefile.am  Makefile.in
plugins/gmerlin/: Makefile.am  Makefile.in  vis_lemuria.c
plugins/libvisual/: Makefile.am  Makefile.in  libactor_lemuria.c
plugins/libvisual/.deps/: actor_lemuria.Plo
utils/: Makefile.in
