EXTRA_DIST = grad2c.c compile \
lemuria_tunnel_1.incl \
lemuria_tunnel_2.incl \
lemuria_tunnel_3.incl \
lemuria_archaic_1.incl \
lemuria_psycho_1.incl \
lemuria_psycho_2.incl \
lemuria_psycho_3.incl \
lemuria_psycho_4.incl \
lemuria_psycho_5.incl \
lemuria_monolith_1.incl \
lemuria_monolith_2.incl \
lemuria_monolith_3.incl \
lemuria_drive_1.incl \
lemuria_drive_2.incl \
lemuria_deepsea_ceiling_1.incl \
lemuria_deepsea_ceiling_2.incl \
lemuria_deepsea_floor_1.incl \
lemuria_lineobjects_1.incl \
lemuria_v4l.incl
