EXTRA_DIST = png2c.c \
archaic_desert.incl \
archaic_desert.png \
fountain1.incl \
fountain1.png \
fountain2.incl \
fountain2.png \
fountain3.incl \
fountain3.png \
gates_floor.incl \
gates_floor.png \
mystic_floor.incl \
mystic_floor.png \
clouds_large.png \
clouds_large.incl \
clouds_small.png \
clouds_small.incl  \
object_bubble.png \
object_bubble.incl

