SUBDIRS = i386 mac config

noinst_HEADERS = aconfig.h \
archaccel.h \
btrace.h \
c256.h \
catalog.h \
complex.h \
config.h \
cursor.h \
fconfig.h \
filter.h \
formulas.h \
fractal.h \
gccaccel.h \
gccbuild.h \
generic.h \
grlib.h \
hicolor.h \
misc-f.h \
param.h \
pixel_t.h \
plane.h \
port.h \
prefix.h \
timers.h \
true24.h \
truecolor.h \
ui.h \
ui_helper.h \
version.h \
xerror.h \
xio.h \
xldio.h \
xmenu.h \
xshl.h \
xthread.h \
zoom.h
