CC     = @CC@
AM_CFLAGS = @CFLAGS2@
LIBS   = @LIBS@ -lm
LFLAGS = @LDFLAGS@
AR     = @AR@
RANLIB = @RANLIB@

noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
       catalog.c \
       thread.c \
       be_thread.c \
       xstring.c \
       help.c \
       xerror.c \
       xshl.c \
       xldio.c \
       xstdio.c \
       xmenu.c \
       timers.c 

